<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/splash_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="@drawable/title_bg"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="@dimen/logo_title_width"
            android:layout_height="@dimen/logo_title_height"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:scaleType="fitXY"
            android:src="@drawable/logo_title" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_camera_input_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_init"
                android:textColor="@color/bind_text_color"
                android:textSize="@dimen/bind_title_size" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_init_text1"
                 android:textColor="@color/bind_text_color"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView2"
                 android:textColor="@color/bind_text_color"
                android:paddingTop="10dp"
                android:text="@string/camera_input_text1"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView3"
                 android:textColor="@color/bind_text_color"
                android:paddingTop="10dp"
                android:text="@string/camera_input_text2"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView4"
                android:layout_below="@+id/textView4"
                android:paddingTop="10dp"
                 android:textColor="@color/bind_text_color"
                android:text="@string/camera_input_text3"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="60dip"
                android:layout_height="60dip"
                android:layout_alignRight="@+id/textView4"
                android:layout_alignTop="@+id/textView5"
                android:scaleType="fitXY"
                android:src="@drawable/semacode" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <Button
                android:id="@+id/bt_start_camera"
                android:layout_width="@dimen/bind_button_width"
                android:layout_height="@dimen/bind_button_height"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/button_red_selector"
                android:text="@string/camera_input_text4"
                android:textColor="#fff"
                android:textSize="@dimen/bind_button_text_size" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >
    </LinearLayout>

</LinearLayout>