<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/splash_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="@drawable/title_bg"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="@dimen/logo_title_width"
            android:layout_height="@dimen/logo_title_height"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:scaleType="fitXY"
            android:src="@drawable/logo_title" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/fast_bind"
            android:textColor="@color/bind_text_color"
            android:textSize="@dimen/bind_title_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/et_sms_bind"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/input_bg"
            android:hint="@string/input_account_name" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/bt_sms_bind"
            android:layout_width="100dp"
            android:layout_height="@dimen/bind_button_height"
            android:layout_gravity="center"
            android:background="@drawable/button_red_selector"
            android:text="@string/start_bind"
            android:textColor="#fff"
            android:textSize="@dimen/bind_button_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="8"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_bind_account_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/bind_info"
            android:textSize="16sp"
            android:textColor="@color/bind_text_color" />
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/bind_info"
            android:textSize="16sp"
            android:textColor="@color/bind_text_color" />
    </LinearLayout>

</LinearLayout>