<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/main_view_background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_bar_height"
        android:layout_weight="1"
        android:background="@drawable/title_main_bg"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="@dimen/logo_title_width"
            android:layout_height="@dimen/logo_title_height"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:scaleType="fitXY"
            android:src="@drawable/logo_title" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/passcode_layout_height"
        android:layout_weight="10"
        android:background="@drawable/tokencode_bg"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingBottom="10dp" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/tokencode_title_bg"
                android:gravity="center"
                android:text="@string/passcode_page_passcode_text"
                android:textColor="#fff"
                android:textSize="13sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/iv_bit_1"
                    android:layout_width="@dimen/passcode_width"
                    android:layout_height="@dimen/passcode_height"
                    android:scaleType="fitXY" />

                <ImageView
                    android:id="@+id/iv_bit_2"
                    android:layout_width="@dimen/passcode_width"
                    android:layout_height="@dimen/passcode_height"
                    android:scaleType="fitXY" />

                <ImageView
                    android:id="@+id/iv_bit_3"
                    android:layout_width="@dimen/passcode_width"
                    android:layout_height="@dimen/passcode_height"
                    android:scaleType="fitXY" />

                <ImageView
                    android:id="@+id/iv_bit_4"
                    android:layout_width="@dimen/passcode_width"
                    android:layout_height="@dimen/passcode_height"
                    android:scaleType="fitXY" />

                <ImageView
                    android:id="@+id/iv_bit_5"
                    android:layout_width="@dimen/passcode_width"
                    android:layout_height="@dimen/passcode_height"
                    android:scaleType="fitXY" />

                <ImageView
                    android:id="@+id/iv_bit_6"
                    android:layout_width="@dimen/passcode_width"
                    android:layout_height="@dimen/passcode_height"
                    android:scaleType="fitXY" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="310dp"
        android:layout_weight="12"
        android:background="@drawable/time_bg"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="245dp"
                android:layout_height="65dp"
                android:layout_gravity="bottom|center_horizontal"
                android:scaleType="fitXY"
                android:src="@drawable/main_graph" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/linearLayout1"
                    android:layout_width="fill_parent"
                    android:layout_height="70dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal" >

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent" >

                        <LinearLayout
                            android:id="@+id/linearLayout2"
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:gravity="center"
                            android:orientation="vertical" >

                            <RelativeLayout
                                android:layout_width="148dp"
                                android:layout_height="fill_parent" >

                                <TextView
                                    android:id="@+id/tv_passcode_time"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerVertical="true"
                                    android:layout_marginLeft="20dp"
                                    android:text="00:00"
                                    android:textColor="@color/main_view_text_color"
                                    android:textScaleX="1.2"
                                    android:textSize="25sp" />

                                <TextView
                                    android:id="@+id/tv_passcode_date"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignLeft="@+id/tv_passcode_time"
                                    android:layout_below="@+id/tv_passcode_time"
                                    android:layout_marginLeft="3dp"
                                    android:text="2011-01-01"
                                    android:textColor="@color/main_view_text_color"
                                    android:textScaleX="1.2"
                                    android:textSize="15sp" />

                                <TextView
                                    android:id="@+id/textView2"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_above="@+id/tv_passcode_time"
                                    android:layout_alignLeft="@+id/tv_passcode_time"
                                    android:layout_marginLeft="3dp"
                                    android:text="@string/passcode_page_time_text"
                                    android:textColor="@color/main_view_text_color"
                                    android:textSize="@dimen/main_view_text_size" />
                            </RelativeLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/linearLayout3"
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:gravity="center"
                            android:orientation="vertical" >
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/linearLayout3"
                            android:layout_width="1dp"
                            android:layout_height="fill_parent"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            android:background="#CED2D5"
                            android:orientation="vertical" >
                        </LinearLayout>

                        <RelativeLayout
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_alignParentTop="true"
                            android:layout_toRightOf="@+id/linearLayout3" >

                            <TextView
                                android:id="@+id/tv_card_number"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="true"
                                android:text="12345678"
                                android:textColor="@color/main_view_text_color"
                                android:textScaleX="1.2"
                                android:textSize="25sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_above="@+id/tv_card_number"
                                android:layout_alignLeft="@+id/tv_card_number"
                                android:layout_marginLeft="8dp"
                                android:text="@string/passcode_page_cardnumber_text"
                                android:textColor="@color/main_view_text_color"
                                android:textSize="@dimen/main_view_text_size" />
                        </RelativeLayout>
                    </RelativeLayout>
                </LinearLayout>

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" >

                    <com.heima.vdun.view.RingView
                        android:layout_width="@dimen/ring_view_width"
                        android:layout_height="@dimen/ring_view_height" >
                    </com.heima.vdun.view.RingView>

                    <com.heima.vdun.view.CountdownIndicator
                        android:id="@+id/pb_progress"
                        android:layout_width="@dimen/countdown_indicator_width"
                        android:layout_height="@dimen/countdown_indicator_height"
                        android:layout_gravity="center" >
                    </com.heima.vdun.view.CountdownIndicator>
                </FrameLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/tv_countdown"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="2dp"
                        android:text="10"
                        android:textColor="@color/main_view_text_color"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/passcode_page_countdown_text"
                        android:textColor="@color/main_view_text_color"
                        android:textSize="@dimen/main_view_text_size" />
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

</LinearLayout>